<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/red">

        <ImageView
            android:id="@+id/iv_logoRestau"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:contentDescription="@string/image_resto"
            android:src="@drawable/cutlery" />

        <TextView
            android:id="@+id/tv_nomRestau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amita"
            android:text="@string/noitavreser_inc"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#EF0202"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spn_restaurantsDeroulants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_remaining_seats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/x_places_restantes"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btn_reserve_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_an_order"
            android:layout_marginTop="50dp" />

        <Button
            android:id="@+id/btn_view_reservations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_orders"
            android:layout_marginTop="50dp" />

    </LinearLayout>

